examples/test/testpolicy19258.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19258
  namespace: namespace247
spec:
  podSelector:
    matchLabels:
      key24: value38
      key8: value0
      key25: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value32
          key11: value34
      podSelector:
        matchLabels:
          key47: value21
